# search_engine

./: .gitignore  CMakeLists.txt  git  search_engine.cpp  search_engine.h
include/: search_engine.h
src/: CMakeLists.txt  main.cpp  realization_classes.cpp  search_engine.cpp
tests/: test.cpp
